# prototip-2.kirisaki.dev

./: .gitignore  Dockerfile  Dockerfile.win  cloudbuild.yaml
client/: package.json  tsconfig.json  webpack.config.js
client/src/: index.html  index.tsx
client/src/components/: About.tsx  App.tsx  Dashboard.tsx  Index.tsx  Navigation.tsx  Notfound.tsx
kustomize/: cert.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
server/: server.cabal
server/src/: Main.hs
terraform/: cloud-build.tf  domain.tf  gke.tf  main.tf
