name:           server
version:        0.1.0.0
description:    prototype No.2
homepage:       https://github.com/kirisaki/prototip-2.kirisaki.dev#readme
bug-reports:    https://github.com/kirisaki/prototip-2.kirisaki.dev/issues
author:         Akihito KIRISAKI
maintainer:     kirisaki@klaraworks.net
copyright:      (c) Akihito KIRISAKI
license:        BSD3
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/kirisaki/prototip-2.kirisaki.dev

executable server-exe
  main-is: Main.hs
  other-modules:
      Paths_server
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , case-insensitive
    , extensible
    , http-types
    , lucid
    , servant
    , servant-server
    , servant-lucid
    , text
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010

test-suite server-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_server
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , extensible
    , case-insensitive
    , http-types
    , lucid
    , servant
    , servant-server
    , servant-lucid
    , text
    , wai
    , wai-extra
    , warp
  default-language: Haskell2010
